[gd_scene load_steps=2 format=2]

[ext_resource path="res://cenas_universais/Dash/dash.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="TimerDuracao" type="Timer" parent="."]
one_shot = true

[node name="TimerSombra" type="Timer" parent="."]
wait_time = 0.03

[connection signal="timeout" from="TimerDuracao" to="." method="_on_TimerDuracao_timeout"]
[connection signal="timeout" from="TimerSombra" to="." method="_on_TimerSombra_timeout"]
